--- a/wcomponents-theme/src/main/sass/wc.ui.backToTop.scss
+++ b/wcomponents-theme/src/main/sass/wc.ui.backToTop.scss
@@ -10,13 +10,8 @@
 	&:before {
 		content: url('../images/back-to-top.svg');
 		display: block;
-		height: 4em;
-		width: 4em;
-
-		@include respond (mobile) {
-			height: 1.5em;
-			width: 1.5em;
-		}
+		height: 1.5em;
+		width: 1.5em;
 	}
 
 	> span {
